resolved more minor bugs on mobile devices

--- a/responsive.css
+++ b/responsive.css
@@ -1,10 +1,10 @@
 @media(max-width: 1400px){
     #menu{
-        position: fixed;
-        margin-top: 5px;
-        margin-left: 5px;
+        position: sticky;
+        top: 5px;
+        left: 5px;
         display: block;
-        z-index: 4;
+        z-index: 10;
     }
     #cancel{
         position: absolute;
@@ -64,16 +64,23 @@
         background-attachment: fixed;
         backdrop-filter: blur(1px) brightness(0.5);
     }
-    body::before{
-        content: "";
-        position: fixed;
+    #menu{
+        position: sticky;
+        top: 5px;
+        left: 5px;
+        display: block;
+        z-index: 10;
+    }
+    .menu{
+        position: sticky;
         top: 0;
         display: flex;
+        align-items: center;
         height: 30px;
         width: 100dvw;
         background-color: black;
-        opacity: 0.3;
-        z-index: -10;
+        opacity: 0.4;
+        z-index: 1;
     }
     .contact {
         position: fixed;
@@ -87,7 +94,7 @@
     .logo77{
         display: none;
     }
-    .call{
+    .contact{
         display: none;
     }
     .main{
@@ -103,5 +110,8 @@
     }
     .registration {
         width: unset;
+    }
+    .ticket{
+        z-index: -5;
     }
 }
